Fix: cors issue fixed